--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="category-heading">
-                                <a href="#"><h3>Women</h3></a>
+                                <a href="#"><h3>For Women</h3></a>
                             </div>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                     <div class="row top2">
                         <div class="col-md-12">
                             <div class="category-heading">
-                                <a href="#"><h3>Men</h3></a>
+                                <a href="#"><h3>For Men</h3></a>
                             </div>
                         </div>
                     </div>
